--- a/doc/Makefile
+++ b/doc/Makefile
@@ -3,7 +3,8 @@ all: doc
 .PHONY: all clean doc
 
 doc: figures
-	../../../../core/bin/build-plugin-documentation.sh
+	cd .. && ./vendor/smalldb/doc-tools/bin/build-documentation
+
 
 figures:
 	make -C figures all
