Add homepage link to composer.json

--- a/composer.json
+++ b/composer.json
@@ -1,18 +1,19 @@
 {
-	"name": "smalldb/libchangelog_sql",
-	"description": "Changelog.SQL is simple and elegant tool to maintain database changes. This package is a library meant to be integrated into your project",
-	"license": "Apache-2.0",
-	"authors": [
-		{
-			"name": "Josef Kufner",
-			"email": "josef@kufner.cz"
-		}
-	],
-	"autoload": {
-		"psr-4": { "Smalldb\\ChangelogSql\\": "class/" }
-	},
-	"require": {
-	},
+    "name": "smalldb/libchangelog_sql",
+    "description": "Changelog.SQL is simple and elegant tool to maintain database changes. This package is a library meant to be integrated into your project",
+    "license": "Apache-2.0",
+    "homepage": "https://smalldb.org/",
+    "authors": [
+        {
+            "name": "Josef Kufner",
+            "email": "josef@kufner.cz"
+        }
+    ],
+    "autoload": {
+        "psr-4": { "Smalldb\\ChangelogSql\\": "class/" }
+    },
+    "require": {
+    },
     "require-dev": {
         "smalldb/doc-tools": "dev-master"
     }
